--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -51,12 +57,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
 }
 nav h1 {
   margin: auto;
+  padding: 25px 50px;
 }
 nav h1 a {
   color: #fff;
