--- a/css/styles.css
+++ b/css/styles.css
@@ -143,17 +143,25 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
+  position: relative;
+  padding-bottom: 70px;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 15px 15px 0 0;
   min-height: 380px;
-  padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: calc((100% - 30px) / 3);
 }
+
+#restaurants-list li:nth-child(3n) {
+    margin: 15px 0 0 0;
+}
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -169,20 +177,22 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 20px 15px 10px;
   text-transform: uppercase;
 }
 #restaurants-list p {
-  margin: 0;
+  margin: 0 15px;
   font-size: 11pt;
 }
 #restaurants-list li a {
+  position: absolute;
+  bottom: 0;
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
+  margin: 15px 10px;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
