--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,12 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
+.inside #maincontent {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 #footer {
   background-color: #444;
   color: #aaa;
@@ -77,7 +83,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    /*width: calc(50% - 80px);*/
 }
 
 /* Display list items side by side */
@@ -204,26 +210,34 @@ nav h1 a {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 2000;
 }
+
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
+  /*background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
   right: 0;
   top: 80px;
   width: 50%;
+  */
+  margin-top: 130px;
+  flex: 0 0 100%;
 }
+/*
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+*/
+/*
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
 }
+*/
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -256,11 +270,14 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 30px 0 30px 40px;
+  /*width: 80%;
+  margin: auto;*/
+  width: 40%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 40px;
+  width: 60%;
 }
 #reviews-container h2 {
   color: #f58500;
