style: Format code

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,72 @@
-@charset "utf-8";
-/* CSS Document */
-
 *,
 *:before,
 *:after {
   box-sizing: border-box;
 }
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
+body,
+td,
+th,
+p {
+	font-family: "Arial", "Helvetica", sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
+
+ul,
+li {
+	font-family: "Arial", "Helvetica", sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
-a img{
+
+a img {
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Arial", "Helvetica", sans-serif;
   margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -60,16 +86,20 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
+
 nav {
   width: 100%;
   background-color: #252831;
   text-align:center;
 }
+
 nav h1 {
   margin: auto;
   padding: 25px 50px;
 }
+
 nav h1 a {
   color: #fff;
   font-size: 14pt;
@@ -77,45 +107,48 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    /*width: calc(50% - 80px);*/
+  padding: 10px 40px 16px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 17px;
+  margin: 0;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #0275d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
   width: 100%;
   background-color: #3397DB;
@@ -123,6 +156,7 @@ nav h1 a {
   display: flex;
   flex-wrap: wrap;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
@@ -130,10 +164,11 @@ nav h1 a {
   line-height: 1;
   margin: 0 20px;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -143,6 +178,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
@@ -152,6 +188,7 @@ nav h1 a {
   display: flex;
   flex-wrap: wrap;
 }
+
 #restaurants-list li {
   position: relative;
   padding-bottom: 70px;
@@ -165,7 +202,7 @@ nav h1 a {
 }
 
 #restaurants-list li:nth-child(3n) {
-    margin: 15px 0 0 0;
+  margin: 15px 0 0 0;
 }
 
 #restaurants-list .restaurant-img {
@@ -176,6 +213,7 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -186,10 +224,12 @@ nav h1 a {
   margin: 20px 15px 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0 15px;
   font-size: 11pt;
 }
+
 #restaurants-list li a {
   position: absolute;
   bottom: 0;
@@ -206,6 +246,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+
 .inside header {
   position: fixed;
   top: 0;
@@ -214,30 +255,10 @@ nav h1 a {
 }
 
 .inside #map-container {
-  /*background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-  */
   margin-top: 130px;
   flex: 0 0 100%;
 }
-/*
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-*/
-/*
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
-*/
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -248,13 +269,16 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
   max-width: 100%;
 }
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -266,18 +290,19 @@ nav h1 a {
   text-align: center;
   text-transform: uppercase;
 }
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 30px 0 30px 40px;
-  /*width: 80%;
-  margin: auto;*/
   width: 40%;
 }
+
 #reviews-container {
   padding: 30px 40px;
   width: 60%;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 20pt;
@@ -285,10 +310,12 @@ nav h1 a {
   letter-spacing: -1px;
   margin-bottom: 5px;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+
 #reviews-list li {
   background-color: #fff;
   border: 2px solid #f3f3f3;
@@ -300,6 +327,7 @@ nav h1 a {
   position: relative;
   border-radius: 15px 0 15px 0;
 }
+
 #reviews-list li > p,
 .review-header {
   margin: 0 0 10px;
@@ -377,7 +405,6 @@ nav h1 a {
     width: 90%;
   }
 }
-
 
 @media screen and (max-width: 360px) {
   .filter-options {
