--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,9 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
-
+.flex-container {
+  display: flex;
+}
 #restaurants-list li h2 {
   color: #b60000;
   font-family: Arial,sans-serif;
@@ -223,6 +225,7 @@ nav h1 a {
   line-height: 1.3;
   margin: 20px 15px 10px;
   text-transform: uppercase;
+  width: calc(100% - 20px);
 }
 
 #restaurants-list p {
@@ -362,6 +365,64 @@ nav h1 a {
 .review-date {
   color: #ccc !important;
 }
+
+.icon-heart {
+  position: relative;
+  color: #ccc;
+  font-size: 20px;
+  cursor: pointer;
+  margin: 20px 10px 10px;
+}
+
+.icon-heart.active {
+  color: #e2202c;
+}
+
+.icon-heart:after {
+  content: "\e900";
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0s ease-in-out;
+}
+
+.icon-heart.active:after {
+  transform: scale(1.5);
+  opacity: 0;
+  transition: all .3s ease-in-out;
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?54j9oy');
+  src:  url('fonts/icomoon.eot?54j9oy#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?54j9oy') format('truetype'),
+    url('fonts/icomoon.woff?54j9oy') format('woff'),
+    url('fonts/icomoon.svg?54j9oy#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-heart:before {
+  content: "\e900";
+}
+
 
 /* ====================== media queries ====================== */
 
